fix(backend): tag service not returning any tags without questions